--- a/biblio.bib
+++ b/biblio.bib
@@ -36,52 +36,24 @@
 %https://civil808.com/sites/default/files/field/files/node_3951-roger_roess_elena_prassas_william_mcshane_trafbookzz.org_.pdf
 %Car-following krauss model https://elib.dlr.de/115720/1/esm_bieker.pdf
 
-% CITAÇÂO DE SITE PARA SEGUIR
-@MISC{lei,
-    author = "{BRASIL}",
-    title = "Código de Trânsito Brasileiro",
-    year = "1997",
-    howpublished = "\url{http://www.planalto.gov.br/ccivil_03/LEIS/L9503.htm}",
-    note = "[Online; acessado em 27 de julho de 2018]"
-}
-
-@MISC{embedded,
-    author = "{Mehl, Ewaldo Luiz de Mattos}",
-    title = "Sistemas Eletrônicos Embarcados",
-    year = "2011",
-    howpublished = "\url{http://www.eletrica.ufpr.br/mehl/te200/aulas/embarcados.pdf}",
-    note = "[Online; acessado em 2 de julho de 2018]"
-}
-
+%https://drive.google.com/file/d/0B4dqD1dpFfsvNXF6Tmpma2Ztczg/view
 @MISC{recife,
-    author = "{Jornal do Comércio}",
-    title = "Recife, a capital com o trânsito mais lento do País",
-    year = "2018",
-    howpublished = "\url{http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/}",
-    note = "[Online; acessado em 1 de setembro de 2018]"
+    author = "{99}",
+    title = "{ITV 99 - Report. Relatório de cálculo de Índice de Tempo de Viagem nas principais cidades brasileiras}",
+    year = "2018"
 }
+
 @MISC{nota_tecnica,
     author = "{Ming, S. Hsien}",
     title = "Uma proposta para critérios de implantação de semáforos de pedestres",
     year = "1993",
-    howpublished = "\url{http://www.cetsp.com.br/media/20650/nt\%20163\%20revisado.pdf}",
-    note = "[Online; acessado em 13 de julho de 2018]"
+    howpublished = "CET - Companhia de Engenharia de Trafego"
 }
 
-@MISC{slides,
-    author = "Gustavo Souto de Sá e Souza",
-    title = "Microcontroladores PIC",
-    year = "2018",
-    howpublished = "\url{http://www.emc.ufg.br/~jwilson/pdf/4_Micro_Parte_4_(PIC)_Introducao.pdf}",
-    note = "[Online; acessado em 20 de setembro de 2018]"
-}
-
-@MISC{areacontrol,
-    author = "Mathew, Tom V.",
-    title = "Area Traffic Control. Lecture Notes in Transportation Systems Engineering",
-    year = "2018",
-    howpublished = "\url{https://www.civil.iitb.ac.in/tvm/nptel/tselnw61.pdf}",
-    note = "[Online; acessado em 30 de outubro de 2018]"
+@MANUAL{lei,
+    organization = "{BRASIL}",
+    title = "Código de Trânsito Brasileiro",
+    year = "1997"
 }
 
 @MANUAL{CET,
@@ -114,6 +86,13 @@
     title = "{32-BIT ARM-BASED MICROPROCESSORS}",
     organization = "{Microchip}",
     year = "2017",
+}
+
+@book {areacontrol,
+    title = "Traffic Engineering",
+    author = "{McShane, R. William et al.}",
+    year = 1998,
+    publisher = "Pearson Education"
 }
 
 @book{manual3,
@@ -173,6 +152,14 @@
   publisher={Pearson}
 }
 
+%http://www.eletr.ufpr.br/mehl/historia_4.pdf
+@MISC{embedded,
+    author = "{Mehl, Ewaldo Luiz de Mattos}",
+    title = "Do Transistor ao Microprocessador",
+    year = "2000",
+    howpublished = "Universidade Federal do Paraná"
+}
+
 @ARTICLE {stress,
     author  = "Tebaldi, E. e Ferreira, V.",
     title   = "{Comportamentos no trânsito e causas da agressividade}",
@@ -188,7 +175,7 @@
 }
 
 @ARTICLE {stress3,
-    author  = "De Souza Pontes, L. R. e Cury Maciel, J. S.",
+    author  = "{De Souza Pontes, L. R. e Cury Maciel, J. S.}",
     title   = "{O estresse como fator gerador de acidentes e consequente aumento da falta de mobilidade urbana}",
     journal = "International Symposium on Project Management, Innovation and Sustainability",
     year    = "2017",
