--- a/intro.tex
+++ b/intro.tex
@@ -18,9 +18,9 @@ O Brasil possui 97 milhões de veículos, dos quais 5.4 milhões chegaram às ru
 Uma grande quantidade de veículos em circulação pode facilmente sobrecarregar a capacidade das vias urbanas, trazendo consequências para o trânsito.
 
 Pesquisas realizadas no começo do ano de 2018 mostraram que, em horários de pico, o trânsito nas principais capitais brasileiras pode resultar em tempos de viagens até 77\% mais demorados que o usual\cite{recife}, %[http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/]
-isso é uma consequência da quantidade de veículos nas ruas. Além disso, existem pesquisas relacionando o trânsito como um gerador de estresse na população, principalmente nos em condutores veiculares, e o estresse como uma das principais causas das agressividades no trânsito \cite{stress}\cite{stress2}.  %[https://www.researchgate.net/profile/Vinicius_Ferreira3/publication/237480019_Comportamentos_no_transito_e_causas_da_agressividade/links/02e7e528bc018b2f72000000/Comportamentos-no-transito-e-causas-da-agressividade.pdf] [https://singep.org.br/6singep/resultado/406.pdf] [http://www2.fm.usp.br/gdc/docs/iof_89_estressetrans.pdf].
+isso é uma consequência da quantidade de veículos nas ruas. Além disso, existem pesquisas relacionando o trânsito como um gerador de estresse na população, principalmente nos em condutores veiculares, e o estresse como uma das principais causas das agressividades no trânsito \cite{stress}\cite{stress2}\cite{stress3}.  %[https://www.researchgate.net/profile/Vinicius_Ferreira3/publication/237480019_Comportamentos_no_transito_e_causas_da_agressividade/links/02e7e528bc018b2f72000000/Comportamentos-no-transito-e-causas-da-agressividade.pdf] [https://singep.org.br/6singep/resultado/406.pdf] [http://www2.fm.usp.br/gdc/docs/iof_89_estressetrans.pdf].
 
-Com o intuito de reduzir riscos e aumentar a organização das vias, é utilizada a sinalização de trânsito. A sinalização de trânsito é o elemento de ligação entre o técnico, o usuário da via, motoristas e pedestres e os agentes de fiscalização. Seu objetivo principal é o de garantir a utilização adequada da via, no sentido da segurança e fluidez do tráfego como um todo. Para atingir este objetivo, é necessário que a sinalização contenha uma mensagem clara e inconfundível e que seja plenamente visível. Desse modo, iniciou-se a padronização dos elementos responsáveis por realizar a sinalização, em cores, formatos, dimensões e critérios de utilização\cite{CET}. %[http://www.cetsp.com.br/media/391986/msuvol01_introducaorev01.pdf]. 
+Com o intuito de reduzir riscos e aumentar a organização das vias, é utilizada a sinalização de trânsito \cite{nota_tecnica}. A sinalização de trânsito é o elemento de ligação entre o técnico, o usuário da via, motoristas e pedestres e os agentes de fiscalização. Seu objetivo principal é o de garantir a utilização adequada da via, no sentido da segurança e fluidez do tráfego como um todo. Para atingir este objetivo, é necessário que a sinalização contenha uma mensagem clara e inconfundível e que seja plenamente visível. Desse modo, iniciou-se a padronização dos elementos responsáveis por realizar a sinalização, em cores, formatos, dimensões e critérios de utilização\cite{CET}. %[http://www.cetsp.com.br/media/391986/msuvol01_introducaorev01.pdf]. 
 O foco deste trabalho é a sinalização semafórica das vias urbanas.
 
 \begin{figure}[ht]
